cmake_minimum_required(VERSION 3.13)

# pull in PICO SDK (must be before project)
include(pico_sdk_import.cmake)

project(research_pico_water_meter C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)


set(PICO_EXAMPLES_PATH ${PROJECT_SOURCE_DIR})

# Initialize the SDK
pico_sdk_init()

add_executable  (   main   
                    main.cpp
                )

# Pull in our pico_stdlib which pulls in commonl
target_link_libraries(  main 
                        pico_stdlib 
                        hardware_i2c
                        hardware_flash
                    )

#create map/bin/hex file etc
pico_add_extra_outputs(main)
pico_enable_stdio_usb(main 1)
pico_enable_stdio_uart(main 0)

